--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.10.7"
+    "sweetalert2": "^11.10.7",
+    "swiper": "^11.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
