--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "date-fns": "^3.6.0",
     "firebase": "^10.11.0",
     "formik": "^2.4.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
@@ -27,6 +29,7 @@
     "react-icons": "^5.1.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
+    "react-to-print": "^2.15.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.7",
     "swiper": "^11.1.3"
